--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,76 @@
 <head>
-	<title>Adam Galloway - TOTP Testing</title>
+    <title>Autha</title>
+    <link href="/static/css/core.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    </meta>
 </head>
-
 <body>
-	<div class="messages">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <p>
+                        Autha
+                    </p>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                {{#if user}}
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="{{#ifCond title '==' 'Home'}}active{{/ifCond}}">
+                        <a href="/">
+                            Home
+                        </a>
+                    </li>
+                    <li class="{{#ifCond title '==' 'Organisations'}}active{{/ifCond}}">
+                        <a href="/orgs">
+                            Organisations
+                        </a>
+                    </li>
+                    <li class="{{#ifCond title '==' 'Teams'}}active{{/ifCond}}">
+                        <a href="/teams">
+                            Teams
+                        </a>
+                    </li>
+                </ul>
+                {{/if}}
+                <ul class="nav navbar-nav navbar-right">
+                {{#if user}}
+                    <li class="dropdown">
+			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user.forename}}<span class="caret"></span></a>
+			          <ul class="dropdown-menu">
+			            <li><a href="/profile">Profile</a></li>
+                        <li><a href="/settings">Settings</a></li>
+			            <li role="separator" class="divider"></li>
+                        <li><a href="/logout">Logout</a></li>
+			          </ul>
+			        </li>
+                {{else}}
+                    <li><a href="/signin">Sign in</a></li>
+                {{/if}}
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        {{#if error}}
+            <div class="alert alert-warning" role="alert">{{error}}</div>
+        {{/if}}
+        {{#if success}}
+            <div class="alert alert-success" role="alert">{{success}}</div>
+        {{/if}}
 
-	</div>
+        {{{body}}}
+    </div>
 
-	<h1>TOTP Computer Science</h1>
-	{{{body}}}
-	
+<script type="text/javascript" src="/static/js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/static/js/core.js"></script>
 </body>
